# JLG_Provider_Recommender

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_REVIEW_SUMMARY.md  CONSOLIDATION_SUMMARY.md  CSV_ONLY_MIGRATION_SUMMARY.md  DEPLOYMENT.md  EDA.ipynb  ENHANCEMENTS.md  EXCEL_ENGINE_FIX.md  FUNCTIONALITY_REVIEW_SUMMARY.md  IMPLEMENTATION_SIGNUP_DATE_FILLING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TIME_PERIOD_FILTERING.md  LICENSE  MIGRATION_GUIDE.md  PARQUET_REMOVAL_COMPLETE.md  QUICK_FIX_S3_CSV.md  README.md  SPECIALTY_FEATURE_SUMMARY.md  STAKEHOLDER_READINESS.md  STRING_CONCATENATION_FIX_SUMMARY.md  THREE_FACTOR_SCORING_IMPLEMENTATION.md  TROUBLESHOOTING_FIX_SUMMARY.md  VERIFICATION_CHECKLIST.md  app.py  app_dev.py  app_polished.py  create_logo_module.py  data_dashboard.py  data_ingestion.py  data_preparation.py  debug_full_name_error.py  logo_data.py  optimized_data_preparation.py  performance_benchmark.py  performance_utils.py  provider_utils.py  (+25 more)
.github/: copilot-instructions.md
.streamlit/: config.toml  secrets.toml
archived/: app.py
assets/: create_base64_logo.py  create_logo_module.py  logo_config.py  logo_data.py
data/: List of Contacts - Provider Referrals.xlsx  List of Contacts.xlsx  Ranked_Contacts.xlsx  Referrals_App_Inbound.xlsx  Referrals_App_Outbound.parquet  Referrals_App_Outbound.xlsx  cleaned_inbound_referrals.parquet  cleaned_outbound_referrals.parquet  cleaned_outbound_referrals.xlsx  data_preparation_report.txt
data/processed/: All_Geocoding_Results.xlsx  Geocoded_Contacts.xlsx  Preferred_Providers_Missing_LatLong.xlsx  Referrals_App_Outbound.parquet  cleaned_all_referrals.parquet  cleaned_inbound_referrals.parquet  cleaned_outbound_referrals.parquet  cleaned_preferred_providers.parquet  geocode_cache.json  provider_summary.xlsx  s3_auto_update_status.txt  unified_referrals.parquet  unified_referrals_detailed.parquet
data/test_processed/: cleaned_all_referrals.parquet  cleaned_inbound_referrals.parquet  cleaned_outbound_referrals.parquet
docs/: API_SECRETS_GUIDE.md  APP_CLEANUP_SUMMARY.md  AUTO_S3_UPDATE.md  BUG_FIX_DEPLOYMENT_ERROR.md  CLEANUP_SUMMARY.md  CODE_CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DATA_INPUT_FORMATS.md  DATA_PIPELINE_ARCHITECTURE.md  DATA_PIPELINE_OPTIMIZATION.md  DATA_WARNINGS_FIX_SUMMARY.md  DATA_WARNINGS_GUIDE.md  DEPRECATION_NOTICE.md  ENHANCEMENTS.md  ERROR_RESOLUTION_SUMMARY.md  ETL_STARTUP_PROCESS.md  FIX_SUMMARY_PREFERRED_PROVIDERS.md  FUNCTIONALITY_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_v2.1.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v2.1.md  INGESTION_MODULE_REVIEW.md  INGESTION_MODULE_UPDATES.md  LAST_VERIFIED_DATE_FEATURE.md  OPTIMIZED_DATA_INGESTION_SUMMARY.md  PERSON_ID_DEDUPLICATION.md  PREFERRED_PROVIDERS_ATTRIBUTION.md  PUBLIC_DEPLOYMENT_CHECKLIST.md  REPOSITORY_REORGANIZATION_SUMMARY.md  S3_MIGRATION_GUIDE.md  SEARCH_PAGE_OPTIMIZATIONS.md  SECURITY.md  SPECIALTY_FILTERING.md
pages/: 0_🏠_home.py  10_How_It_Works.py  10_🛠️_How_It_Works.py  1_Search.py  1_🔎_Search.py  20_Data_Quality.py  20_📊_Data_Dashboard.py  21_Data_Dashboard.py  2_Results.py  2_📄_Results.py  30_Update_Data.py  30_♻️_Update_Data.py  30_🔄_Update_Data.py  5_👟_Quick_Start_Guide.py
prepare_contacts/: Cleaning_Preferred_Providers.ipynb  Contact_Geocode_Search.ipynb  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  analyze_unified_data.py  clean_outbound_referrals.py  contact_cleaning.ipynb  contact_cleaning.xlsx  contact_geolocation.ipynb  contact_update.ipynb  excel_to_parquet.py  geocode_providers_to_excel.py  run_unified_cleaning.bat  run_unified_cleaning.sh  unified_referral_cleaning.py
prepare_contacts/Excel_Workflows/: List of Contacts - Referrals - Inbound.xlsx  List of Contacts - Referrals - Outbound.xlsx  Visual Workflow.xlsx
scripts/: cleanup_check.py  regenerate_data.py  reorganize_repository.py  run_app.bat  run_tests.py  setup_dev_environment.py  validate_improvements.py
src/: app_logic.py
tests/: README.md  TEST_EXPANSION_SUMMARY.md  conftest.py  test_address_search_integration.py  test_cleaning.py  test_data_preparation.py  test_distance_calculation.py  test_geocode_fallback.py  test_integration.py  test_io_utils.py  test_last_verified_date.py  test_person_id_deduplication.py  test_person_id_warning_suppression.py  test_preferred_provider_attribution.py  test_provider_utils.py  test_providers_wrappers.py  test_radius_filter.py  test_responsive_toggle.py  test_s3_client.py  test_scoring.py  test_specialty_filtering.py  test_validation.py
(+46 files in other folders)
